--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p>Welcome to Laundry Mart. Your one-stop solution for all of your laundry needs. We ensure top-notch service, providing hassle-free laundry Experience. With focus on quality and customer satisfaction. We take care of your garments as if were our own.</p>
-    <img src="https://www.google.com/imgres?q=laundry%20service&imgurl=https%3A%2F%2Fimages.squarespace-cdn.com%2Fcontent%2Fv1%2F636fd93bb20ae968f91ece82%2F1713559561523-ZMLEUZPF6QSLVBM9GKYQ%2Flaundry_service_near_downtown_long_beach.jpg&imgrefurl=https%3A%2F%2Fwww.cocolaundry.com%2Fblog%2Ftypes-of-laundry-services&docid=ii01ZvsTT6AK-M&tbnid=tmofPUD4dJacOM&vet=12ahUKEwjT-OmPtOKOAxWnwTgGHb8JIqQQM3oECBoQAA..i&w=1000&h=600&hcb=2&ved=2ahUKEwjT-OmPtOKOAxWnwTgGHb8JIqQQM3oECBoQAA" alt="laundry">
+    <img src="laundry1.jpeg" alt="laundry" width="210px">
     <p><h2>Our Services</h2></p>
     <ul>
     <li>Washing & Drying</li>
